GNOME Bugzilla – Bug 692312
codecparsers: vc1: fix bitplanes decoding
Last modified: 2013-01-25 00:04:55 UTC
Created attachment 234121 [details] [review] codecparsers: vc1: fix bitplanes decoding Hi, this patch fixes decoding of DIFF2 or NORM2 bitplanes with an odd number of macroblocks. In particular, we need to account for the first bit that was already parsed so that to avoid a buffer overflow after all pairs are parsed. This fixes SA00040.vc1 conformance test with gstreamer-vaapi. I plan to push this patch to gst-plugins-bad 0.10 and 1.0 branches too. Thanks.
commit 82200d75ae1542922ec7f52f6ab7ba7746eebe67 Author: Gwenole Beauchesne <gwenole.beauchesne@intel.com> Date: Tue Jan 22 18:01:24 2013 +0100 codecparsers: vc1: fix bitplanes decoding. Fix decoding of DIFF2 or NORM2 bitplanes with an odd number of macroblocks. In particular, account for the first bit that was already parsed so that to avoid a buffer overflow after all pairs are parsed. This fixes SA00040.vc1 conformance test. https://bugzilla.gnome.org/show_bug.cgi?id=692312 Signed-off-by: Gwenole Beauchesne <gwenole.beauchesne@intel.com>